# hikcamera-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  lefthook.yml  pixi.toml
conda-packages/hikcamera-mvs/: recipe.yaml
conda-packages/hikcamera-mvs-runtime/: recipe.yaml
conda-packages/hikcamera-mvs/sources/5.0.1-20260512/: VERSION.txt
conda-packages/hikcamera-mvs/sources/5.0.1-20260512/include/: CameraParams.h  (+1 more)
crates/hikcamera/: Cargo.toml
crates/hikcamera-studio/: Cargo.toml
crates/hikcamera-studio/examples/: show.rs
crates/hikcamera-studio/src/: lib.rs  show.rs
crates/hikcamera-sys/: .clangd  Cargo.toml  README.md  build.rs  wrapper.h
crates/hikcamera-sys/include/: MvCameraControl.h  MvErrorDefine.h  PixelType.h
crates/hikcamera-sys/lib/win32/: MvCameraControl.lib  MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti  MvProducerGEV.cti  MvProducerU3V.cti
crates/hikcamera-sys/lib/win64/: MvCameraControl.lib  MvFGProducerGEV.cti  MvFGProducerXoF.cti  MvProducerU3V.cti
crates/hikcamera-sys/src/: lib.rs
crates/hikcamera-sys/tests/: bindings.rs  compile_pass.rs
crates/hikcamera/examples/: camera.rs  device.rs  show.rs  system.rs
crates/hikcamera/src/: camera.rs  device.rs  error.rs  error_tests.rs  lib.rs  show.rs  system.rs
crates/hikrobot-sys/: build.rs
crates/hikrobot/examples/: camera.rs
docs/: index.md
docs/c-sdk/: CameraParams.md  MvCameraControl.md  MvErrorDefine.md  MvISPErrorDefine.md  MvObsoleteInterfaces.md  ObsoleteCamParams.md  PixelType.md
docs/hikcamera/: camera.md  device.md  error.md  index.md  show.md  system.md
docs/hikcamera-studio/: show.md
docs/hikcamera-sys/: index.md
docs/hikcamera-sys/c-sdk/: CameraParams.md  MvCameraControl.md  MvErrorDefine.md  MvISPErrorDefine.md  MvObsoleteInterfaces.md  ObsoleteCamParams.md  PixelType.md
docs/rust-sdk/: camera.md  device.md  error.md  system.md
scripts/: check.py  check.toml  check_dll_deps.py  check_env.py
scripts/env/: win_dll.toml
site/: .npmrc  README.md  astro.config.mjs  justfile  package.json  playwright.config.ts  pnpm-lock.yaml
site/public/styles/: docs.css
site/scripts/: capture-react-flow-smoke.mjs  capture-runtime-flow-only.mjs  capture-runtime-graph.mjs  compare-react-flow-edge.mjs  inspect-runtime-edge-dom.mjs  inspect-runtime-edge-svg.mjs  inspect-runtime-graph.mjs  inspect-runtime-nodes.mjs  probe-runtime-edge-points.mjs  seed-placeholders.sh
site/src/: content.config.ts
site/src/components/: ConstantTable.jsx  DocRenderer.astro  LifecycleStrip.jsx  ReactFlowSmoke.jsx  RecipeTable.jsx  RuntimeDependencyGraph.jsx
site/src/data/: navigation.js  pages.js
site/src/layouts/: DocsLayout.astro
site/src/lib/: renderMarkdown.js
site/src/pages/: [...slug].astro  index.astro  react-flow-smoke.astro
site/src/styles/: hikcamera.css
site/tests/: react-flow-smoke.spec.ts  runtime-dependencies.spec.ts
(+48 files in other folders)
