[workspace]
members = [
    "crates/hikcamera",
    "crates/hikcamera-sys",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rust wrapper for HikCamera MVS camera SDK"
repository = "https://github.com/xiaoze-cn/HikCamera-rs"
readme = "README.md"
keywords = ["hikcamera", "mvs", "camera", "sdk"]
categories = ["api-bindings", "computer-vision"]
