[package]
name = "hikcamera-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
links = "MvCameraControl"

[lib]
doctest = false

[dependencies]

[build-dependencies]
bindgen = "0.72"
