[package]
name = "hikcamera"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hikcamera-sys = { path = "../hikcamera-sys" }

derive_more = { version = "2", features = ["from"] }
thiserror = "2"
